Add new function to categorize toppings

--- a/dataCleaning.ipynb
+++ b/dataCleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 84,
    "id": "8f055d23",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 85,
    "id": "2e06a99d",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 86,
    "id": "7e63dd45",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 87,
    "id": "6e074e00",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 88,
    "id": "a88c0847",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 89,
    "id": "5b015d74",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 90,
    "id": "69a8c5f5",
    "metadata": {},
    "outputs": [],
@@ -127,6 +127,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "574eaa24",
+   "metadata": {},
+   "source": [
+    "# Add TOPPINGS categorie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c640030",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def change_to_toppings(desc, category):\n",
+    "    pattern = r'\\b(ADD?)\\b'\n",
+    "    match = re.search(pattern, desc)\n",
+    "    if match:\n",
+    "        desc = re.sub(pattern, \"\", desc).strip()\n",
+    "        category = \"ADD-ONS\"\n",
+    "    return desc, category\n",
+    "\n",
+    "\n",
+    "df[[\"Item Desc\", \"Category\"]] = df.apply(\n",
+    "    lambda row: pd.Series(change_to_toppings(row[\"Item Desc\"], row[\"Category\"])),\n",
+    "    axis=1\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "329d73c7",
    "metadata": {},
    "source": [
@@ -135,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 92,
    "id": "e3f18628",
    "metadata": {},
    "outputs": [],
