Add new function to extract amount from disc and update quantity

--- a/dataCleaning.ipynb
+++ b/dataCleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 109,
    "id": "8f055d23",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 110,
    "id": "2e06a99d",
    "metadata": {},
    "outputs": [],
@@ -37,12 +37,22 @@
     "        qty = qty * x + y\n",
     "        desc = re.sub(pattern, \"\", desc).strip()\n",
     "        discount = match.group(0)\n",
-    "    return desc, qty, discount"
+    "    return desc, qty, discount\n",
+    "\n",
+    "\n",
+    "def extract_quantity(desc, qty):\n",
+    "    pattern = r\"^\\d+(?! SEASONS)\"\n",
+    "    match = re.search(pattern, desc)\n",
+    "    if match:\n",
+    "        x = int(match.group(0))\n",
+    "        qty = qty * x\n",
+    "        desc = re.sub(pattern, \"\", desc).strip()\n",
+    "    return desc, qty"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 111,
    "id": "7e63dd45",
    "metadata": {},
    "outputs": [],
@@ -51,6 +61,11 @@
     "\n",
     "df[[\"Item Desc\", \"Quantity\", \"Discount Type\"]] = df.apply(\n",
     "    lambda row: pd.Series(adjust_quantity(row[\"Item Desc\"], row[\"Quantity\"], row[\"Discount Type\"])),\n",
+    "    axis=1\n",
+    ")\n",
+    "\n",
+    "df[[\"Item Desc\", \"Quantity\"]] = df.apply(\n",
+    "    lambda row: pd.Series(extract_quantity(row[\"Item Desc\"], row[\"Quantity\"])),\n",
     "    axis=1\n",
     ")"
    ]
@@ -65,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 112,
    "id": "6e074e00",
    "metadata": {},
    "outputs": [],
@@ -77,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 113,
    "id": "a88c0847",
    "metadata": {},
    "outputs": [],
@@ -95,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 114,
    "id": "5b015d74",
    "metadata": {},
    "outputs": [],
@@ -114,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 115,
    "id": "69a8c5f5",
    "metadata": {},
    "outputs": [],
@@ -135,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "id": "3c640030",
    "metadata": {},
    "outputs": [],
@@ -165,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 117,
    "id": "e3f18628",
    "metadata": {},
    "outputs": [],
