--- a/dataCleaning.ipynb
+++ b/dataCleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "8f055d23",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "2e06a99d",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "7e63dd45",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "6e074e00",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "a88c0847",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "5b015d74",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "69a8c5f5",
    "metadata": {},
    "outputs": [],
@@ -138,6 +138,17 @@
     "    lambda x: 'GLS' if any(w in x.upper() for w in ['GLS', 'GLASS']) \n",
     "    else ('BTL' if any(w in x.upper() for w in ['BTL', 'BOTTLE']) else '')\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9a6357e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"Bottle/Glass\"] = df[\"GLS/BTL\"].map({\"GLS\": \"Glass\", \"BTL\": \"Bottle\"}).fillna(\"\")\n",
+    "df.to_csv('caffe_change.csv', index=False)"
    ]
   },
   {
@@ -150,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "3c640030",
    "metadata": {},
    "outputs": [],
@@ -180,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "e3f18628",
    "metadata": {},
    "outputs": [],
@@ -191,7 +202,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "project",
+   "display_name": "data-visualization",
    "language": "python",
    "name": "python3"
   },
@@ -205,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
