--- a/dataCleaning.ipynb
+++ b/dataCleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "8f055d23",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "2e06a99d",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "7e63dd45",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "6e074e00",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "a88c0847",
    "metadata": {},
    "outputs": [],
@@ -110,13 +110,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "5b015d74",
    "metadata": {},
    "outputs": [],
    "source": [
     "df[\"Week number\"] = df[\"Date\"].dt.isocalendar().week\n",
     "df.to_csv('caffe_change.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e8f4a68",
+   "metadata": {},
+   "source": [
+    "# Add Hour column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec5889e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/n1/rhpqtbg90rq_85vnsylnfq2r0000gn/T/ipykernel_36887/2284766911.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  df[\"Hour\"] = pd.to_datetime(df[\"Time\"].astype(str), errors=\"coerce\").dt.hour\n"
+     ]
+    }
+   ],
+   "source": [
+    "df[\"Hour\"] = pd.to_datetime(df[\"Time\"].astype(str), errors=\"coerce\").dt.hour"
    ]
   },
   {
@@ -129,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "id": "69a8c5f5",
    "metadata": {},
    "outputs": [],
@@ -142,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "9a6357e2",
    "metadata": {},
    "outputs": [],
@@ -161,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "3c640030",
    "metadata": {},
    "outputs": [],
@@ -191,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "id": "e3f18628",
    "metadata": {},
    "outputs": [],
@@ -202,7 +229,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data-visualization",
+   "display_name": "project",
    "language": "python",
    "name": "python3"
   },
@@ -216,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
